# ChangeLog for media-video/isight-firmware-tools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/isight-firmware-tools/ChangeLog,v 1.13 2010/05/22 11:44:05 tove Exp $

  22 May 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove genstef from metadata.xml (#66339)

*isight-firmware-tools-1.5.92 (14 May 2010)

  14 May 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -isight-firmware-tools-1.5.90.ebuild,
  +isight-firmware-tools-1.5.92.ebuild:
  Version bump. Support for new firwares. Clean up old revision.

*isight-firmware-tools-1.5.90-r1 (05 May 2010)

  05 May 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/isight-firmware-tools-1.2-ift-ldadd.patch,
  -files/isight-firmware-tools-1.2-rules.patch,
  -isight-firmware-tools-1.4.2.ebuild,
  -files/isight-firmware-tools-1.4.2-hal-disable.patch,
  isight-firmware-tools-1.5.90.ebuild,
  +isight-firmware-tools-1.5.90-r1.ebuild,
  +files/isight-firmware-tools-1.5.90-build-O0.patch:
  Fix udev rules, bug #316027. Fix build problem with -O0, bug #306803.

*isight-firmware-tools-1.5.90 (24 Feb 2010)

  24 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
  +isight-firmware-tools-1.5.90.ebuild:
  Version bump, bug #297480. Add translations, support for X.{5.7,5.8,6}.
  Drop HAL support.

*isight-firmware-tools-1.4.2 (28 Jun 2009)

  28 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -isight-firmware-tools-1.2-r1.ebuild, -isight-firmware-tools-1.4.1.ebuild,
  +isight-firmware-tools-1.4.2.ebuild,
  +files/isight-firmware-tools-1.4.2-hal-disable.patch:
  Bump to 1.4.2. Make it buildable without hal installed, bug #259015. Use
  virtual/libusb:0, bug #270039.

*isight-firmware-tools-1.4.1 (15 Feb 2009)

  15 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -isight-firmware-tools-1.2.ebuild, -isight-firmware-tools-1.4.ebuild,
  +isight-firmware-tools-1.4.1.ebuild:
  Bump to 1.4.1. Add more hash for firmware extraction.
